[package]
name = "rust-station"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
rand = { version = "0.10.1", features = ["thread_rng"] }
rust-station-core = { path = "../rust-station-core" }
toml = "1.1.2"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.70"
web-sys = { version = "0.3.95", features = [
    "console",
    "Window",
    "Document",
    "DomRect",
    "NodeList",
    "HtmlCollection",
    "HtmlElement",
    "Element",
    "Node",
    "HtmlImageElement",
    "HtmlDivElement",
    "CssStyleDeclaration",
    "DomTokenList",
    "Request",
    "RequestMode",
    "RequestInit",
    "Response",
    "Headers",
] }

[features]
default = ["console_error_panic_hook"]
